--- a/TestProject/TestProject.vcxproj
+++ b/TestProject/TestProject.vcxproj
@@ -157,11 +157,17 @@ xcopy "$(SolutionDir)Extern\AlphaEngine\lib\fmod.dll" "$(OutDir)" /s /r /y /q</C
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\Source\Ball.cpp" />
+    <ClCompile Include="..\Source\GlobalFunc.cpp" />
+    <ClCompile Include="..\Source\Logo.cpp" />
     <ClCompile Include="..\Source\Main.cpp" />
+    <ClCompile Include="..\Source\MainMenu.cpp" />
     <ClCompile Include="..\Source\PongGame.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Source\Ball.h" />
+    <ClInclude Include="..\Source\GlobalFunc.h" />
+    <ClInclude Include="..\Source\Logo.h" />
+    <ClInclude Include="..\Source\MainMenu.h" />
     <ClInclude Include="..\Source\PongGame.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
