--- a/TestProject/TestProject.vcxproj
+++ b/TestProject/TestProject.vcxproj
@@ -158,6 +158,7 @@ xcopy "$(SolutionDir)Extern\AlphaEngine\lib\fmod.dll" "$(OutDir)" /s /r /y /q</C
   <ItemGroup>
     <ClCompile Include="..\Source\Animation.cpp" />
     <ClCompile Include="..\Source\Ball.cpp" />
+    <ClCompile Include="..\Source\Button.cpp" />
     <ClCompile Include="..\Source\GlobalFunc.cpp" />
     <ClCompile Include="..\Source\Logo.cpp" />
     <ClCompile Include="..\Source\Main.cpp" />
@@ -167,6 +168,7 @@ xcopy "$(SolutionDir)Extern\AlphaEngine\lib\fmod.dll" "$(OutDir)" /s /r /y /q</C
   <ItemGroup>
     <ClInclude Include="..\Source\Animation.h" />
     <ClInclude Include="..\Source\Ball.h" />
+    <ClInclude Include="..\Source\Button.h" />
     <ClInclude Include="..\Source\GlobalFunc.h" />
     <ClInclude Include="..\Source\Logo.h" />
     <ClInclude Include="..\Source\MainMenu.h" />
